--- a/src/Routefind.Cli/Routefind.Cli.csproj
+++ b/src/Routefind.Cli/Routefind.Cli.csproj
@@ -5,12 +5,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>routefind</AssemblyName>
+    <AssemblyName>apimap</AssemblyName>
     
     <!-- .NET Tool Configuration -->
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>routefind</ToolCommandName>
-    <PackageId>routefind</PackageId>
+    <ToolCommandName>apimap</ToolCommandName>
+    <PackageId>apimap</PackageId>
     <Version>1.0.0</Version>
     <Authors>ApiMap</Authors>
     <Description>A CLI tool that discovers and indexes HTTP routes from ASP.NET codebases</Description>
